<resources>
    <string name="app_name">SP Messenger</string>
    <string name="title_home">Чаты</string>
    <string name="title_dashboard">Диалог</string>
    <string name="title_notifications">Настройки</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Авторизация</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="register">Регистрация</string>
    <string name="go_to_login">Авторизоваться</string>
    <string name="go_to_register">Зарегестрироваться</string>
    <string name="LoginName">Логин</string>
    <string name="Theme">Тема</string>
    <string name="light">Светлая</string>
    <string name="Confidentiality">Конфиденциальность</string>
    <string name="NotificationsAndSounds">Уведомелния и звуки</string>
    <string name="DataAndMemory">Данные и память</string>
    <string name="Energoyaving">"Энергосбережение"</string>
    <string name="ChatFolders">папки с чатами</string>
    <string name="Exit">Выйти погулять</string>
    <string name="theme">Светлая</string>
    <string name="themeFragment">Темы</string>
    <string name="dataAndMemoryFragment">Данные и память</string>
    <string name="confidentialityFragment">Конфиденциальность</string>
    <string name="chatFoldersFragment">Папки с Чатами</string>
    <string name="energoyavingFragment">"Энергоэффективность "</string>
    <string name="notificationsAndSoundsFragment">Уведомления и Звук</string>
    <string name="default_notification_channel_id">mess</string>
    <string name="channel_id">mess</string>
    <string name="users_dialog_title">Написать:</string>
</resources>