<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:visibility="invisible"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--        <View-->
<!--            android:id="@+id/divider1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="2dp"-->
<!--            android:outlineSpotShadowColor="@color/black"-->
<!--            app:layout_constraintTop_toBottomOf="@id/text_notifications" />-->

<!--        <SeekBar-->
<!--            android:id="@+id/seekBar2"-->
<!--            style="@style/Widget.AppCompat.SeekBar.Discrete"-->
<!--            android:layout_width="202dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:max="3"-->
<!--            android:min="0"-->
<!--            android:progress="1"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/switch1" />-->

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/text_notifications" />

        <Button
            android:id="@+id/btnTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableLeft="@drawable/baseline_light_24"
            android:padding="16dp"
            android:text="@string/Theme"
            android:textColor="@color/textButton"
            android:textSize="20sp"
            android:drawableTint="@color/textButton"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btnConfidentiality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:padding="16dp"
            android:drawableTint="@color/textButton"
            android:text="@string/Confidentiality"
            android:textColor="@color/textButton"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btnNotificationsAndSounds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableLeft="@drawable/ic_notifications_black_24dp"
            android:padding="16dp"
            android:text="@string/NotificationsAndSounds"
            android:textColor="@color/textButton"
            android:drawableTint="@color/textButton"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnConfidentiality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btnDataAndMemory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableLeft="@drawable/baseline_data_saver_off_24"
            android:padding="16dp"
            android:text="@string/DataAndMemory"
            android:textColor="@color/textButton"
            android:drawableTint="@color/textButton"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnNotificationsAndSounds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btnEnergoyaving"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableTint="@color/textButton"
            android:drawableLeft="@drawable/baseline_energy_savings_leaf_24"
            android:padding="16dp"
            android:text="@string/Energoyaving"
            android:textColor="@color/textButton"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnDataAndMemory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btnChatFolders"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableTint="@color/textButton"
            android:drawableLeft="@drawable/baseline_folder_24"
            android:padding="16dp"
            android:text="@string/ChatFolders"
            android:textColor="@color/textButton"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnEnergoyaving"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btnExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawableTint="@color/textButton"
            android:drawableLeft="@drawable/baseline_exit_to_app_24"
            android:padding="16dp"
            android:text="@string/Exit"
            android:textColor="@color/textButton"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnChatFolders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>