<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.messenger.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.messenger.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.messenger.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_themeFragment"
            app:destination="@id/themeFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_chatFoldersFragment"
            app:destination="@id/chatFoldersFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_confidentialityFragment"
            app:destination="@id/confidentialityFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_dataAndMemoryFragment"
            app:destination="@id/dataAndMemoryFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_energoyavingFragment"
            app:destination="@id/energoyavingFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_notificationsAndSoundsFragment"
            app:destination="@id/notificationsAndSoundsFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFoldersFragment"
        android:name="com.example.messenger.ui.settings.chatFolders.ChatFoldersFragment"
        android:label="ChatFoldersFragment" />
    <fragment
        android:id="@+id/confidentialityFragment"
        android:name="com.example.messenger.ui.settings.confidentiality.ConfidentialityFragment"
        android:label="ConfidentialityFragment" />
    <fragment
        android:id="@+id/dataAndMemoryFragment"
        android:name="com.example.messenger.ui.settings.dataAndMemory.DataAndMemoryFragment"
        android:label="DataAndMemoryFragment" />
    <fragment
        android:id="@+id/energoyavingFragment"
        android:name="com.example.messenger.ui.settings.energoyaving.EnergoyavingFragment"
        android:label="EnergoyavingFragment" />
    <fragment
        android:id="@+id/notificationsAndSoundsFragment"
        android:name="com.example.messenger.ui.settings.notificationsAndSounds.NotificationsAndSoundsFragment"
        android:label="NotificationsAndSoundsFragment" />
    <fragment
        android:id="@+id/themeFragment"
        android:name="com.example.messenger.ui.settings.theme.ThemeFragment"
        android:label="fragment_theme"
        tools:layout="@layout/fragment_theme" />
</navigation>